untitled/objects/Team_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Forum_Case__c</referenceTo>
        <relationshipLabel>Team Assignments</relationshipLabel>
        <relationshipName>Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hearing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hearing</label>
        <referenceTo>Hearing__c</referenceTo>
        <relationshipLabel>Team Assignments</relationshipLabel>
        <relationshipName>Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>Matter__c</referenceTo>
        <relationshipLabel>Team Assignments</relationshipLabel>
        <relationshipName>Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Team Assignments</relationshipLabel>
        <relationshipName>Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Assignments</pluralLabel>
    <recordTypes>
        <fullName>Case_Team_Assignment</fullName>
        <active>true</active>
        <description>The assignment of a team to a case</description>
        <label>Case Team Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hearing_Team_Assignment</fullName>
        <active>true</active>
        <description>The assignment of a team to a hearibng</description>
        <label>Hearing Team Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Matter_Team_Assignement</fullName>
        <active>true</active>
        <description>The assignment of a team to a matter</description>
        <label>Matter Team Assignement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>